--- a/app/views/prototypes/second-form/answers-provider.html
+++ b/app/views/prototypes/second-form/answers-provider.html
@@ -221,54 +221,46 @@
             </div>
             <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
               
-              <h2 class="govuk-caption-m">Funding stream: Traineeship 16-18<span style="float: right"><a href="#">Edit</a></span></h2>
+              <h2 class="govuk-caption-m">Teacher<span style="float: right"><a href="#">Edit</a></span></h2>
               <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                 
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Learners
+                    Personal information
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    12
+                    
                   </dd>
                   
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Payments
+                    Job role
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    £ 34000
+                    
                   </dd>
                   
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Funding retained
+                    Contract
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    £ 34000
+                    
                   </dd>
                   
                 </div>
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Locations
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    London
-                  </dd>
-                  
-                </div>
+                
               </dl>
               <a href="subcontractor">
                 <button class="govuk-button govuk-button--secondary" data-module="govuk-button" id="checkBtn">
-                  Add funding stream
+                  Add staff member
                 </button>
               </a>
               <a href="delete-confirmation-2">
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Delete subcontractor
+                Delete staff member
               </button>
               </a>
             </div>
@@ -294,55 +286,47 @@
             </div>
             <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
               
-              <h2 class="govuk-caption-m">Funding stream: Adult Education budget<span style="float: right"><a href="#">Edit</a></span></h2>
+              <h2 class="govuk-caption-m">Teacher<span style="float: right"><a href="#">Edit</a></span></h2>
               <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                 
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Learners
+                    Personal
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    140
+                    
                   </dd>
                   
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Payments
+                    Job role
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    £ 4200
+                    
                   </dd>
                   
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Funding retained
+                    Contract
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    £ 1200
+                    
                   </dd>
                   
                 </div>
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Locations
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    East Midlands, London
-                  </dd>
-                  
-                </div>
+                
               </dl>
               
               <a href="subcontractor">
                 <button class="govuk-button govuk-button--secondary" data-module="govuk-button" id="checkBtn">
-                  Add funding stream
+                  Add a staff member
                 </button>
               </a>
               <a href="delete-confirmation-2">
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Delete subcontractor
+                Delete staff member
               </button>
               </a>
             </div>
