--- a/app/views/prototypes/final-vacancies/answers-provider.html
+++ b/app/views/prototypes/final-vacancies/answers-provider.html
@@ -116,6 +116,100 @@
             </dd>
           </div>
 
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Teacher vacancies filled
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Construction, Planning and the Built Environment - 4
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Digital / ICT - 3
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+  
+
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Performing arts - 1
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Teacher vacancies open
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Construction, Planning and the Built Environment - 0
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Digital / ICT - 0
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+  
+
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Performing arts - 0
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
           
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -123,7 +217,7 @@
             </dt>
             <dd class="govuk-summary-list__value">
               Construction, Planning and the Built Environment
-- No applicants
+- No applicants, A lack of specialist skills
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -137,7 +231,7 @@
               
             </dt>
             <dd class="govuk-summary-list__value">
-              Digital / ICT - No applicants
+              Digital / ICT - No applicants, Looking for more pay
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -191,7 +285,7 @@
     </a>
   &nbsp; &nbsp;
 
-    <a href="start-staff"  class="govuk-button govuk-button--secondary">Save and finish later</a>
+    <a href="start-staff-saved"  class="govuk-button govuk-button--secondary">Save and finish later</a>
 
         </form>
 
