--- a/app/views/prototypes/second-form/template.html
+++ b/app/views/prototypes/second-form/template.html
@@ -46,6 +46,8 @@
 </div>
 <br>
 <p><a href="#">Download the FE staff template</a>
+
+  <a href="/reports/DownloadHistoryReport/10033670/11/1920/Period%20end%20reports_R11.zip">Period end reports_R11.zip <span class="govuk-visually-hidden">2019 to 2020</span></a>
 </p>
 
 <!--/public/javascripts/[then the name of your file to download]-->
