--- a/app/views/prototypes/second-form/home.html
+++ b/app/views/prototypes/second-form/home.html
@@ -55,8 +55,8 @@
     
                 <div class="govuk-grid-column-one-third tile">
                     <a class="min-height" href="start-staff">
-                        <span class="govuk-heading-m heading">Tell us about your staff</span>
-                        <span class="govuk-heading-s heading">28 November 2021</span>
+                        <span class="govuk-heading-m heading">FE workforce </span>
+                        <span class="govuk-heading-s heading">Tell us about your staff</span>
                     </a>
                     <div class="govuk-body govuk-!-font-size-19 warning-info">4 days left to submit</div>
     
