--- a/app/views/prototypes/second-form/role-main.html
+++ b/app/views/prototypes/second-form/role-main.html
@@ -29,69 +29,63 @@
 
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-            
-
+          
 
 <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+  <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
         What is John's main role?
       </h1>
-    </legend><br>
+    </legend>
+
+    <br>
     
+    
+        <div id="waste-hint" class="govuk-hint">
+          Select the role where they spend most of their time.
+        </div><br>
+
     <div class="govuk-radios">
-      
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="radio-lead1" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Senior leader
         </label>
-        
       </div>
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <input class="govuk-radios__input" id="radio-lead2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
           Manager
         </label>
-        
-
-        
       </div>
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <input class="govuk-radios__input" id="radio-lead3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Teacher
         </label>
-        
       </div>
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <input class="govuk-radios__input" id="radio-lead4" name="where-do-you-live" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
           Teaching support
         </label>
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <input class="govuk-radios__input" id="radio-lead5" name="where-do-you-live" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
           Administration
         </label>
       </div>
+    </div><br>
 
-    </div>
   </fieldset>
 </div>
 
-<br>
-
-
-          <a href="qualification-type" class="govuk-button show-continue" style="display: inline;">
-      Continue
-    </a>
+<a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
+  Continue
+</a>
        
       </div>
     </div>
