--- a/app/views/prototypes/second-form/role.html
+++ b/app/views/prototypes/second-form/role.html
@@ -51,7 +51,9 @@
               Senior leader
             </label>
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Principal, vice-principal, working director or CEO
+              Principal, vice-principal, director, CEO, head of FE service or training
+
+
             </div>
 
           </div><br>
@@ -73,7 +75,7 @@
             </label>
 
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Someone who teachers or trains as the main part of their job
+              Lecturer, teacher, trainer or tutor
             </div>
           </div><br>
           <div class="govuk-checkboxes__item">
