--- a/app/views/prototypes/second-form/does-teach.html
+++ b/app/views/prototypes/second-form/does-teach.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Is John the head of your FE provision?
+        Does John have any teaching responsibilities?
       </h1>
     </legend>
   
@@ -47,7 +47,7 @@
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         
       </legend>
-      <!--<div id="sign-in-hint" class="govuk-hint">
+     <!--<div id="sign-in-hint" class="govuk-hint">
         Select the main one
       </div>-->
 
@@ -55,27 +55,22 @@
       
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-leader1" name="teach" type="radio" value="#">
+          <input class="govuk-radios__input" id="radio-include1" name="teach" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
-          Yes 
+            Yes
           </label>
-          <!--<div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-            Head of your organisation or your FE provision
-          </div>-->
+          
         </div>
 
         <br>
-        <p>Or</p>
 
 
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-leader2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
-          <label class="govuk-label govuk-radios__label" for="leader">
-            No - but a member of the senior leadership team
+          <input class="govuk-radios__input" id="radio-include2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <label class="govuk-label govuk-radios__label" for="sign-in-2">
+            No
           </label>
-          <!--<div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-            Apprenticeships, traineeships, T levels
-          </div>-->
+          
         </div>
 
         <br>
