--- a/app/views/prototypes/second-form/staff-zero.html
+++ b/app/views/prototypes/second-form/staff-zero.html
@@ -44,62 +44,33 @@
 <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
 <br> <br>
 
-<!--<button class="govuk-button govuk-button--secondary" data-module="govuk-button" href="add-two">
-  Add a member of staff
-</button>-->
-
-
-<br>
 
 <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
 
-       
 
-
-
-<table class="govuk-table">
-
-  <thead class="govuk-table__head">
-  <tr class="govuk-table__row">
-  
-  <th class="govuk-table__cell--numeric"></th>
-</tr>
-</thead>
-
-
-
-<tbody class="govuk-table__body">
-
-
-
-<tr class="govuk-table__row">
-
-<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-  <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-    John Adams
-  </a>
-</h3>
-
-    </td>
+<dl class="govuk-summary-list govuk-!-margin-bottom-1">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+        John Adams
+      </a>
+    </dt>
     
-     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-      Delete<span class="govuk-table__cell--numeric"></span>
-    </a></td></tr>
-</tr>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="edit">
+        Delete<span class="govuk-visually-hidden"></span>
+      </a>
+    </dd>
 
-<tr class="govuk-table__row">
+  </div>
+ 
+  </div>
+  
+
+</dl><br>
 
 
-
-</tbody>
-</table>
- <!--<p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
-
-          <input type="hidden" name="answers-checked" value="true">
-
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-    Save
-    </a>-->
+ 
 
         </form>
 
