--- a/app/views/prototypes/final-vacancies/start-intro2.html
+++ b/app/views/prototypes/final-vacancies/start-intro2.html
@@ -32,8 +32,9 @@
           <li>Individualised learner records (ILR)</li>
           <li>Earnings adjustment statements (EAS)</li>
           <li>European Social Fund supplementary data (ESF)</li>
-          <li>FE workforce data collection</li>
               <li>Funding claims</li>
+              <li>FE workforce data</li>
+              <li>Governor data</li>
         </ul>
         <p>You can also view and download reports for your data.</p>
         <a href="home" role="button" class="govuk-button govuk-button--start">
