--- a/app/views/prototypes/final-vacancies/start-intro2.html
+++ b/app/views/prototypes/final-vacancies/start-intro2.html
@@ -37,7 +37,7 @@
               <li>Governor data</li>
         </ul>
         <p>You can also view and download reports for your data.</p>
-        <a href="home" role="button" class="govuk-button govuk-button--start">
+        <a href="details" role="button" class="govuk-button govuk-button--start">
       Sign in
     </a>
             <h2 class="govuk-heading-m">Before you start</h2>
