--- a/app/views/prototypes/final-vacancies/details.html
+++ b/app/views/prototypes/final-vacancies/details.html
@@ -53,7 +53,7 @@
     
 <br>
 
-  <a href="start-intro2" class="govuk-button" type="submit">Sign in</a>
+  <a href="home" class="govuk-button" type="submit">Sign in</a>
 
   </div>
 
