--- a/app/views/prototypes/final-vacancies/apprentices.html
+++ b/app/views/prototypes/final-vacancies/apprentices.html
@@ -7,7 +7,7 @@
   <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
-      beta
+      Prototype
     </strong>
     
   </p>
