--- a/app/views/prototypes/alex-governors/home.html
+++ b/app/views/prototypes/alex-governors/home.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="govuk-grid-column-one-third tile">
-                    <a class="min-height" href="start-intro2">
+                    <a class="min-height" href="how-many">
                         <span class="govuk-heading-m heading">FE workforce</span>
                         <span class="govuk-heading-s heading">About your governors</span>
                     </a>
