--- a/app/views/prototypes/alex-governors/start-intro2.html
+++ b/app/views/prototypes/alex-governors/start-intro2.html
@@ -17,81 +17,43 @@
 
 {% block content %}
 
-
-
-  
-  
-
-      <div class="govuk-width-container">
-  <div class="govuk-breadcrumbs">
-    <ol class="govuk-breadcrumbs__list">
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="#">Home</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="#">Section</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">Subsection</li>
-    </ol>
-  </div>
+      
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Tell us about your governors</h1>
-        <span class="govuk-caption-l">August 2020 to July 2021</span><br>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h1 class="govuk-heading-xl">
+            Submit learner data
+          </h1>
+        <p class="govuk-body-l">This service is for training providers that receive funding directly from the Education and Skills Funding Agency.</p>
+        <p>Use this service to validate and submit:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Individualised learner records (ILR)</li>
+          <li>Earnings adjustment statements (EAS)</li>
+          <li>European Social Fund supplementary data (ESF)</li>
+              <li>Funding claims</li>
+              <li>FE workforce data</li>
+              <li>Governor data</li>
+        </ul>
+        <p>You can also view and download reports for your data.</p>
+        <a href="details" role="button" class="govuk-button govuk-button--start">
+      Sign in
+    </a>
+            <h2 class="govuk-heading-m">Before you start</h2>
+        <p>You will need:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>your IdAMS (Information Management Services system) login details</li>
+          <li>an XML or Zip file to upload - for ILR data</li>
+          <li>a CSV file to upload - for EAS and ESF data</li>
+        </ul>
+        </div>
+    </div>
+  </div>
+  
+  <div>
 
-        <p class="govuk-body">As a college you need to submit information about your governors </p>
-
-        <br>
-
-        
-
-        <a href="how-many" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-          Start now
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-          </svg>
-        </a>
-
-        <h2 class="govuk-heading-m">You'll need to tell us your governors personal details</h2>
-          
-          <p class="govuk-body"></p>
-        
-          
-          <p>The data collection is open for six weeks, from the end of June. </p>
-      </div>
-
-      <div class="govuk-grid-column-one-third">
-
-        <!-- The Related items component is not part of GOV.UK Frontend but will be styled if used in the Prototype Kit -->
-
-        <aside class="app-related-items" role="complementary">
-          <h2 class="govuk-heading-m" id="subsection-title">
-            Related content
-          </h2>
-          <nav role="navigation" aria-labelledby="subsection-title">
-            <ul class="govuk-list govuk-!-font-size-16">
-              <li>
-                <a class="govuk-link" href="#">
-                  Why do I need to complete the FE workforce data collection?
-                </a>
-              </li>
-              <li>
-                <a class="govuk-link" href="#">
-                  Who will benefit from the FE workforce data collection?
-                </a>
-              </li>
-              <li>
-                <a href="#" class="govuk-link govuk-!-font-weight-bold">
-                  More <span class="govuk-visually-hidden">in Subsection</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </aside>
-
-      </div>
+      
     </div>
   </main>
 
