--- a/app/views/prototypes/second-form/start-staff.html
+++ b/app/views/prototypes/second-form/start-staff.html
@@ -72,6 +72,17 @@
             <td class="govuk-table__cell"><a href="edit-staff">Edit</a><br>
               <a href="delete-confirmation">Delete</a></td>
           </tr>
+
+
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">19/10/2020 - 11:05am</td>
+            <td class="govuk-table__cell">Organisation</td>
+            <td class="govuk-table__cell"><strong class="govuk-tag">
+                Saved
+              </strong></td>
+            <td class="govuk-table__cell"><a href="edit-org">Edit</a><br>
+              <a href="delete-confirmation">Delete</a></td>
+          </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell">09/08/2020 - 12:30pm</td>
             <td class="govuk-table__cell">Organisation</td>
