--- a/app/views/prototypes/final-vacancies/start-staff.html
+++ b/app/views/prototypes/final-vacancies/start-staff.html
@@ -71,9 +71,20 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a>
-                <p class="govuk-body">Your full-time, part-time and temporary staff. <p>Include senior leaders, managers, teachers, teaching support and administration staff.</p>
+                <p class="govuk-body">Your full-time, part-time and temporary staff. <br>Include senior leaders, managers, teachers, teaching support and administration staff.</p>
+                <p></p>
+                
+                </p>
+                <p>There are three ways to do this:</p>
+                <ol class="govuk-list govuk-list--number">
+                  <li>Enter your staff individually in an online form.</li>
+                  <li>Download a template and enter your staff data then upload your file back.</li>
+                  <li>Upload the XML file generated from your MI/HR system or via a downloaded template.</li>
+                </ol></td>
+              <td class="govuk-table__cell" scope="row">       
+
+                
               </td>
-              <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
             </tr>
             
