--- a/app/views/prototypes/final-vacancies/start-staff.html
+++ b/app/views/prototypes/final-vacancies/start-staff.html
@@ -27,7 +27,7 @@
 
     <div class="govuk-body account-info">
       <div>
-          <span class="your-name" id="bannerUserName">Sam Smith UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
+          <span class="your-name" id="bannerUserName">Florence Bridger UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
       </div>
 
 
