--- a/app/views/prototypes/second-form/list-staff-john-end.html
+++ b/app/views/prototypes/second-form/list-staff-john-end.html
@@ -351,7 +351,7 @@
 
     &nbsp; &nbsp;
 
-    <a href="start-staff"  class="govuk-button govuk-button--secondary">Save and finish later</a>
+    <a href="start-staff-saved"  class="govuk-button govuk-button--secondary">Save and finish later</a>
 
         
 
