--- a/app/views/prototypes/final-vacancies/template.html
+++ b/app/views/prototypes/final-vacancies/template.html
@@ -39,15 +39,14 @@
 
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Download a template</h1>
+      <h1 class="govuk-heading-xl">Download the template</h1>
 
 <div class="govuk-inset-text">
- Add your staff information to the Excel template and upload the file before the deadline date 
+ Download the template and add your staff information. Then come back to upload the completed file. 
 </div>
 <br>
-<p><a href="#">Download the FE staff template</a>
-</p>
 
+<a class="govuk-link" href="/public/javascripts/template.csv" download>Download the FE staff template</a>
 <!--/public/javascripts/[then the name of your file to download]-->
 
 
