--- a/app/views/prototypes/final-vacancies/template.html
+++ b/app/views/prototypes/final-vacancies/template.html
@@ -42,7 +42,7 @@
       <h1 class="govuk-heading-xl">Download the template</h1>
 
 <p>
- Download the template and add your staff information. Then come back to upload the completed file. 
+ Enter your staff information in the template. Then come back to upload the completed file. 
 </p>
 <br>
 
