--- a/app/views/prototypes/final-vacancies/mis.html
+++ b/app/views/prototypes/final-vacancies/mis.html
@@ -58,7 +58,7 @@
 <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-2" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-2">
-          Download an Excel template and add your staff information
+          Download a template and add your staff information
         </label>
       </div>
       <div class="govuk-radios__item">
