--- a/app/views/prototypes/final-vacancies/leave.html
+++ b/app/views/prototypes/final-vacancies/leave.html
@@ -46,11 +46,25 @@
 
             </h1>
             <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
-          </div><br><br></form>
+          </div><br></form>
 
-          <form action="/form-handler" method="post" novalidate>
-            <div class="govuk-form-group">
-            </form>
+  
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+   
+    <div class="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+        <label class="govuk-label govuk-checkboxes__label" for="waste">
+          They don't get annual leave entitlement
+        </label>
+      </div>
+      
+      
+    </div>
+
+  </fieldset>
+</div><br>
   
 
           
