--- a/app/views/prototypes/final-vacancies/template.html
+++ b/app/views/prototypes/final-vacancies/template.html
@@ -46,7 +46,7 @@
 </p>
 <br>
 
-<a class="govuk-link" href="/public/javascripts/template_xls_aspx.mht" download>Download the FE staff template</a>
+<a class="govuk-link" href="/public/javascripts/FEWorkforce.xls" download>Download the FE staff template</a>
 <!--/public/javascripts/[then the name of your file to download]-->
 
 
