--- a/app/views/prototypes/final-vacancies/list-staff-john-end.html
+++ b/app/views/prototypes/final-vacancies/list-staff-john-end.html
@@ -353,7 +353,7 @@
 
     &nbsp; &nbsp;
 
-    <a href="home"  class="govuk-button govuk-button--secondary">Save and finish later</a>
+    <a href="start-staff-saved"  class="govuk-button govuk-button--secondary">Save and finish later</a>
 
         
 
