--- a/app/views/prototypes/second-form/how-long-education.html
+++ b/app/views/prototypes/second-form/how-long-education.html
@@ -43,6 +43,10 @@
 
     <p>Include any time in a previous role before they joined your organisation.
     </p>
+
+    <div class="govuk-inset-text">
+      This year you can select 'Don't know' but you will need to give an answer next year.
+    </div><br>
     
     
     <div class="govuk-radios">
@@ -62,13 +66,13 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          3 to 10 years
+          4 to 10 years
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          10 to 20 years
+          11 to 20 years
         </label>
       </div>
       <div class="govuk-radios__item">
