--- a/app/views/prototypes/second-form/fte.html
+++ b/app/views/prototypes/second-form/fte.html
@@ -43,7 +43,7 @@
     
     
   <span id="sort-code-hint" class="govuk-hint">
-    For example, 0.6 means the member of staff works three days a week.
+    For example, if their weekly hours are 35 - then 0.6 means they work 21 hours a week.
   </span>
 
             </h1>
@@ -58,7 +58,7 @@
 <br>
 
 
-          <a href="date" class="govuk-button show-continue" style="display: inline;">
+          <a href="leave" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
