--- a/app/views/prototypes/final-vacancies/leave.html
+++ b/app/views/prototypes/final-vacancies/leave.html
@@ -56,7 +56,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          They don't get annual leave entitlement
+          They don't have annual leave entitlement
         </label>
       </div>
       
