--- a/app/views/prototypes/return-staff/role.html
+++ b/app/views/prototypes/return-staff/role.html
@@ -65,7 +65,7 @@
             </label>
 
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Middle management
+              Functional or people manager. Faculty, department, curriculum, or programme lead. Advanced practitioner.
             </div>
           </div><br>
           <div class="govuk-checkboxes__item">
