--- a/app/views/prototypes/final-vacancies/answers-provider.html
+++ b/app/views/prototypes/final-vacancies/answers-provider.html
@@ -74,7 +74,9 @@
               Teacher vacancies
             </dt>
             <dd class="govuk-summary-list__value">
-              Construction, Planning and the Built Environment - 4
+              Construction, Planning and the Built Environment - 4<br>
+              Digital / ICT - 3<br>
+              Performing arts - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -84,124 +86,15 @@
           </div>
 
           
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Digital / ICT - 3
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-  
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Performing arts - 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Teacher vacancies filled
             </dt>
             <dd class="govuk-summary-list__value">
-              Construction, Planning and the Built Environment - 4
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Digital / ICT - 3
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-  
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             
-            </dt>
-            <dd class="govuk-summary-list__value">
+              Construction, Planning and the Built Environment - 4<br>
+              Digital / ICT - 3<br>
               Performing arts - 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Teacher vacancies open
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Construction, Planning and the Built Environment - 0
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Digital / ICT - 0
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-  
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Performing arts - 0
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -216,8 +109,7 @@
               Difficult to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              Construction, Planning and the Built Environment
-- No applicants, A lack of specialist skills
+              Construction, Planning and the Built Environment, Digital / ICT 
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -226,11 +118,13 @@
             </dd>
           </div>
 
+          
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              
+              Difficult reason
             </dt>
             <dd class="govuk-summary-list__value">
+              Construction, Planning and the Built Environment - No applicants, A lack of specialist skills<br>
               Digital / ICT - No applicants, Looking for more pay
             </dd>
             <dd class="govuk-summary-list__actions">
@@ -240,6 +134,7 @@
             </dd>
           </div>
 
+          
           
 
 
