--- a/app/views/prototypes/final-vacancies/apprentices.html
+++ b/app/views/prototypes/final-vacancies/apprentices.html
@@ -28,6 +28,7 @@
             <h1 class="govuk-heading-xl">
               How many apprentices worked for you in the last academic year?
 </h1>
+<span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
 
             
 <p>
