--- a/app/views/prototypes/final-vacancies/difficult-reason.html
+++ b/app/views/prototypes/final-vacancies/difficult-reason.html
@@ -40,7 +40,8 @@
       <h1 class="govuk-fieldset__heading">
         Why was it difficult to recruit for these subjects?
       </h1>
-    </legend><br>
+    </legend>
+    <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br><br>
 
     <h2 class="govuk-heading-m">
       Construction, Planning and the Built Environment
