--- a/app/views/prototypes/final-vacancies/difficult.html
+++ b/app/views/prototypes/final-vacancies/difficult.html
@@ -39,9 +39,7 @@
               </h1>
             </legend>
 
-            <!--<div id="citizenship-conditional-hint" class="govuk-hint">
-              Enter the number for each subject
-              </div>-->
+            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span>
           
             <br><br>
 
