--- a/app/views/prototypes/final-vacancies/filled-or.html
+++ b/app/views/prototypes/final-vacancies/filled-or.html
@@ -38,6 +38,7 @@
                 How many teaching vacancies were filled?
               </h1>
             </legend>
+            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
 
             <div id="citizenship-conditional-hint" class="govuk-hint">
               Enter the number for each subject
@@ -84,7 +85,7 @@
         </div>
 
 
-          <a href="open" class="govuk-button show-continue" style="display: inline;">
+          <a href="difficult" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
