--- a/app/views/prototypes/final-vacancies/vacancies-subject.html
+++ b/app/views/prototypes/final-vacancies/vacancies-subject.html
@@ -39,6 +39,8 @@
                 How many teaching vacancies did you have - by subject?
               </h1>
             </legend>
+
+            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
             <div id="citizenship-conditional-hint" class="govuk-hint">
             Add the teacher vacancies you had - next to their subjects in the list
             </div>
