--- a/app/views/prototypes/final-vacancies/many-vacancies-filled.html
+++ b/app/views/prototypes/final-vacancies/many-vacancies-filled.html
@@ -36,7 +36,7 @@
         How many of these vacancies were filled?
       </h1>
     </legend><br>
-    <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
+    <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br><br>
 
     
     <div class="govuk-form-group">
