--- a/app/views/prototypes/final-vacancies/difficult-reason.html
+++ b/app/views/prototypes/final-vacancies/difficult-reason.html
@@ -24,7 +24,8 @@
 
 
 
-   <span class="govuk-caption-xl">John Adams </span>
+<h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
 <br>
   
