--- a/app/views/prototypes/final-vacancies/difficult.html
+++ b/app/views/prototypes/final-vacancies/difficult.html
@@ -39,7 +39,7 @@
               </h1>
             </legend>
 
-            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span>
+            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
           
             <br><br>
 
