--- a/app/views/prototypes/final-vacancies/many-vacancies.html
+++ b/app/views/prototypes/final-vacancies/many-vacancies.html
@@ -38,7 +38,7 @@
     </legend><br>
 
     
-        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
     <div class="govuk-form-group"><br>
       
       <label class="govuk-label" for="width-10">
