--- a/app/views/prototypes/final-vacancies/apprentices.html
+++ b/app/views/prototypes/final-vacancies/apprentices.html
@@ -23,12 +23,17 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
         
-          <div class="govuk-form-group">
-
-            <h1 class="govuk-heading-xl">
-              How many apprentices worked for you in the last academic year?
-</h1>
-<span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+        <h1 class="govuk-fieldset__heading">
+          How many apprentices worked for you?
+        </h1>
+      </legend>
+  
+      
+          <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
+      <div class="govuk-form-group"><br>
 
             
 <p>
