--- a/app/views/index.html
+++ b/app/views/index.html
@@ -231,7 +231,7 @@
       <p>Changed governor questions <a href="/prototypes/alex-governors/start-intro2">New governor question</a>
       </p>
 
-      <p>Second journey <a href="/prototypes/second-form/details">Form</a>
+      <p>Second journey <a href="/prototypes/second-form/details">Staff</a>
       </p>
 
       <br><br>
