--- a/app/views/prototypes/second-form/complete-john-four.html
+++ b/app/views/prototypes/second-form/complete-john-four.html
@@ -28,7 +28,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">John Adams</h1><br>
+        <h1 class="govuk-heading-xl">Rekha Patel</h1><br>
 
         
         
@@ -52,9 +52,7 @@
               <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
                 Personal
               </a></h3>
-              <p>
-                Male<br>
-              White</p>
+              
           </dt>
           
           <dd class="govuk-summary-list__actions">
