--- a/app/views/prototypes/second-form/does-teach.html
+++ b/app/views/prototypes/second-form/does-teach.html
@@ -26,7 +26,7 @@
         
   
 
-  <span class="govuk-caption-xl">John Adams </span><br>
+  <span class="govuk-caption-xl">Rekha Patel </span><br>
 
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Does John have any teaching responsibilities?
+        Does Rekha have any teaching responsibilities?
       </h1>
     </legend>
   
