--- a/app/views/prototypes/second-form/list-staff-john.html
+++ b/app/views/prototypes/second-form/list-staff-john.html
@@ -41,7 +41,7 @@
         <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
 <br> <br>
 
-<h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>      
+<h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>      
       
 <table class="govuk-table">
 
@@ -71,7 +71,7 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       <a href="complete-julie-five" class="govuk-link govuk-link--no-visited-state">
-        Julie Ann Angelo
+        Amy Cuzan
       </a>
     </dt>
     
@@ -82,15 +82,16 @@
     </dd>
 
   </div>
+
+  
  
   </div>
   
 
-</dl><br><br><br><br>
-
-<h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>      
+</dl>
+    
       
-<table class="govuk-table">
+
 
 <thead class="govuk-table__head">
 <tr class="govuk-table__row">
@@ -103,7 +104,7 @@
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
         <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-          Julienne Williams
+          Rekha Patel
         </a>
       </dt>
       
