--- a/app/views/prototypes/second-form/role-main.html
+++ b/app/views/prototypes/second-form/role-main.html
@@ -25,7 +25,7 @@
 
         
 
-  <span class="govuk-caption-xl">John Adams </span><br>
+  <span class="govuk-caption-xl">Rekha Patel</span><br>
 
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
@@ -35,7 +35,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is John's main role?
+        What is Rekha's main role?
       </h1>
     </legend>
 
