--- a/app/views/prototypes/second-form/role.html
+++ b/app/views/prototypes/second-form/role.html
@@ -25,7 +25,7 @@
 
         
 
-  <span class="govuk-caption-xl">John Adams </span><br>
+  <span class="govuk-caption-xl">Rekha Patel</span><br>
 
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
@@ -36,7 +36,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which best describes John's role?
+        Which best describes Rekha's role?
       </h1>
     </legend><br>
     
