--- a/app/views/prototypes/second-form/start-staff.html
+++ b/app/views/prototypes/second-form/start-staff.html
@@ -78,7 +78,7 @@
             <td class="govuk-table__cell">19/10/2020 - 11:05am</td>
             <td class="govuk-table__cell">Organisation</td>
             <td class="govuk-table__cell"><strong class="govuk-tag">
-                Saved
+              Submitted
               </strong></td>
             <td class="govuk-table__cell"><a href="edit-org">Edit</a><br>
               <a href="delete-confirmation">Delete</a></td>
