--- a/app/views/prototypes/second-form/start-staff.html
+++ b/app/views/prototypes/second-form/start-staff.html
@@ -70,7 +70,7 @@
                 Saved
               </strong></td>
             <td class="govuk-table__cell"><a href="edit-staff">Edit</a><br>
-              <a href="delete-confirmation">Delete</a></td>
+              <a href="delete-saved">Delete</a></td>
           </tr>
 
 
