--- a/app/views/prototypes/second-form/mis.html
+++ b/app/views/prototypes/second-form/mis.html
@@ -57,15 +57,10 @@
 <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-2">
-          Download an Excel template and add your staff information
+          Start a new staff return
         </label>
       </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="" name="#" type="radio" value="#">
-        <label class="govuk-label govuk-radios__label" for="choose-3">
-          Upload your .xml file
-        </label>
-      </div>
+      
 
       <!--<div class="govuk-inset-text">
   You can add their names and email address or upload a file with the information
@@ -81,7 +76,7 @@
 
 
 
-            <a href="list-staff-john-end.html" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
+            <a href="add" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
       Continue
     </a>
        
