--- a/app/views/prototypes/second-form/start-staff.html
+++ b/app/views/prototypes/second-form/start-staff.html
@@ -81,7 +81,7 @@
               Submitted
               </strong></td>
             <td class="govuk-table__cell"><a href="edit-org">Edit</a><br>
-              <a href="delete-confirmation">Delete</a></td>
+              <a href=""></a></td>
           </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell">09/08/2020 - 12:30pm</td>
