--- a/app/views/prototypes/second-form/start-staff-end.html
+++ b/app/views/prototypes/second-form/start-staff-end.html
@@ -66,7 +66,7 @@
               </tr>
               <tr class="govuk-table__row">
                 
-                <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="list-staff-john-end">Your staff</a></td>
+                <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="list-final">Your staff</a></td>
                 <td class="govuk-table__cell" scope="row">       </td>
                 <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
               </tr>
