--- a/app/views/prototypes/final-vacancies/start-staff.html
+++ b/app/views/prototypes/final-vacancies/start-staff.html
@@ -40,13 +40,13 @@
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1><br>
 
   
-        <h1 class="govuk-heading-xl">Tell us about your further education staff
-          <br><br>
-        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
-
-        <p>If you receive direct funding from ESFA you must tell us about the staff you employ.</p><p>There are two parts to this collection. Save each section and return as many times as you need before you submit.</p>
+        <h1 class="govuk-heading-xl">Tell us about your further education staff</h1>
+        
         
 
+        <p>If you receive direct funding from ESFA you must tell us about the staff who worked for you in this year. </p>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
+        <p>There are two parts to this collection. Save each section and return as many times as you need before you submit.</p>
         <table class="govuk-table">
           
           <thead class="govuk-table__head">
