--- a/app/views/prototypes/second-form/start-staff.html
+++ b/app/views/prototypes/second-form/start-staff.html
@@ -80,7 +80,7 @@
             <td class="govuk-table__cell"><strong class="govuk-tag">
               Submitted
               </strong></td>
-            <td class="govuk-table__cell"><a href="edit-org">Edit</a><br>
+            <td class="govuk-table__cell"><a href="edit-org">View</a><br>
               <a href=""></a></td>
           </tr>
       <tr class="govuk-table__row">
