fix index for Hal

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -223,20 +223,22 @@
 
       <br><br>
 
-      <h2 class="govuk-heading-m">Alex - new vacancies and governors - 15 February 2021</h2>
+      <h2 class="govuk-heading-m">Alex - new governors - 15 February 2021</h2>
 
-      <p>Best flow for vacancies <a href="/prototypes/final-vacancies/details">New flow for vacancies</a>
-      </p>
+      
 
       <p>Changed governor questions <a href="/prototypes/alex-governors/start-intro2">New governor question</a>
       </p>
 
-      <p>Second journey <a href="/prototypes/second-form/details">Staff</a>
+      <br><br>
+      <h2 class="govuk-heading-m">Hal - first and second visit - 23 February 2021</h2>
+
+      <p>First visit <a href="/prototypes/final-vacancies/details">Best flow </a>
+      </p>
+      <p>Second visit <a href="/prototypes/second-form/details">For staff in a form</a>
       </p>
 
       <br><br>
-
-  
 
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
