--- a/app/views/prototypes/final-vacancies/add.html
+++ b/app/views/prototypes/final-vacancies/add.html
@@ -7,7 +7,7 @@
   <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
-      prototype
+      beta
     </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
@@ -163,16 +163,11 @@
       <h2 class="govuk-heading-m">Ethnicity</h2>
     </legend>
     <div class="govuk-radios">
+      <label class="govuk-label--s" for="full-name">
+        White
+      </label><br><br>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="" name="ethnic-group" type="radio" value="white">
-        <label class="govuk-label govuk-radios__label" for="white">
-          White
-        </label>
-      </div>
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="ethnic-group" type="radio" value="english">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           English / Welsh / Scottish / Northern Irish / British
         </label>
