--- a/app/views/prototypes/final-vacancies/what-teaching-qualification.html
+++ b/app/views/prototypes/final-vacancies/what-teaching-qualification.html
@@ -97,6 +97,16 @@
         </span>
       </div>
 
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 8
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Doctor of Education (EdD) 
+        </span>
+      </div>
+
        <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
